started but not good

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,20 +2,24 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address,leak
 
-SRCS = 
+SRCS = init_philo.c init.c main.c parsing.c check.c
+OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME):
-	@$(CC) $(CFLAGS) $(SRCS) -o $(NAME)
+$(NAME): $(OBJS)
+	@$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 	@echo "Philosophers compiled successfully!"
 
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
 clean:
-	@rm -rf *.o
-	@echo "Cleaned up object!"
+	@rm -f $(OBJS)
+	@echo "Cleaned up object files!"
 
 fclean: clean
-	@rm -rf $(NAME)
+	@rm -f $(NAME)
 	@echo "Fully cleaned up the project!"
 
 re: fclean all
